First part and img

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<div class="row" style="min-height: -webkit-fill-available;">
+  <div class="col-lg-8 text-light bg-dark mh-100">
+    <h1>Lucas Brito</h1>
+    <h3>Aluno de Big Data no Agronegócio</h3>
+  </div>
+  <div class="col-lg-4 mh-100 imgPrincipal">
+  </div>
+</div>
