--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,18 @@
 <div class="row" style="min-height: -webkit-fill-available;">
   <div class="col-lg-8 text-light bg-dark mh-100">
-    <h1>Lucas Brito</h1>
-    <h3>Aluno de Big Data no Agronegócio</h3>
+    <div class="d-flex justify-content-center">
+      Lucas Brito
+      
+      Aluno de Big Data no Agronegócio
+    </div>
+    <div class="d-flex align-items-start">
+      Descrição
+
+      blablabablbabbabalbabbablablababablalalalblbabalblbabalbalbalbablbablablbalbaba
+    </div>
+    <div class="d-flex justify-content-center">
+      Contatos
+    </div>
   </div>
   <div class="col-lg-4 mh-100 imgPrincipal">
   </div>
