--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,30 @@
 <div class="row" style="min-height: -webkit-fill-available;">
   <div class="col-lg-8 text-light bg-dark mh-100">
-    <div class="d-flex justify-content-center">
-      Lucas Brito
-      
-      Aluno de Big Data no Agronegócio
-    </div>
-    <div class="d-flex align-items-start">
-      Descrição
-
-      blablabablbabbabalbabbablablababablalalalblbabalblbabalbalbalbablbablablbalbaba
+    <div class="d-flex justify-content-center mt-5">
+      <h1 id="title_name">Lucas Brito</h1>
     </div>
     <div class="d-flex justify-content-center">
-      Contatos
+      <h3 id="sub_title">Aluno de Big Data no Agronegócio</h3>
+    </div>
+    <hr>
+    <div class="d-flex align-items-start ml-3 mr-3 mt-5">
+      <h5>Sobre</h5>
+    </div>
+    <div class="d-flex align-items-start ml-4 mr-4 sobre_text">
+      Olá, bem vindo ao meu web site, me chamo Lucas de Brito Silva e possuo {{idade}} anos. Considero-me um entusiasta
+      em Tecnologia e sou motivado pelos meus sonhos, em que para realiza-los, buscquei capacitar-me com a formação no
+      curso Técnico de Computação na ETEC Professor Massuyuki Kawano e atualmente realizo o curso de Big Data no
+      Agronegócio, sendo da primeira turma a se formar no Brasil. Espero que você tenha prazer em desbravar meu site,
+      vamos nessa?
+    </div>
+    <div class="d-flex justify-content-center mt-5">
+      icons
     </div>
   </div>
   <div class="col-lg-4 mh-100 imgPrincipal">
   </div>
+</div>
+
+<div class="row">
+
 </div>
