--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -25,3 +25,7 @@ hr{
 .sobre_text {
     font-family: 'Open Sans', 'Roboto Condensed', 'Lato', sans-serif;
 }
+
+.icons_div{
+    margin-top: 10rem;
+}
