--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,8 +17,25 @@
       Agronegócio, sendo da primeira turma a se formar no Brasil. Espero que você tenha prazer em desbravar meu site,
       vamos nessa?
     </div>
-    <div class="d-flex justify-content-center mt-5">
-      icons
+    <div class="d-flex justify-content-center icons_div">
+      <a href="" class="text-white ml-3">
+        <fa name="fab fa-whatsapp" size="2x"></fa>
+      </a>
+      <a href="" class="text-white ml-3">
+        <fa name="fab fa-facebook-f" size="2x"></fa>
+      </a>
+      <a href="" class="text-white ml-3">
+        <fa name="fab fa-instagram" size="2x"></fa>
+      </a>
+      <a href="" class="text-white ml-3">
+        <fa name="fab fa-envelope" size="2x"></fa>
+      </a>
+      <a href="" class="text-white ml-3">
+        <fa name="fab fa-stack-overflow" size="2x"></fa>
+      </a>
+      <a href="" class="text-white ml-3">
+        <fa name="fab fa-linkedin" size="2x"></fa>
+      </a>
     </div>
   </div>
   <div class="col-lg-4 mh-100 imgPrincipal">
