--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,22 +18,23 @@
       vamos nessa?
     </div>
     <div class="d-flex justify-content-center icons_div">
-      <a href="" class="text-white ml-3">
+      <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
         <fa name="fab fa-whatsapp" size="2x"></fa>
       </a>
-      <a href="" class="text-white ml-3">
+      <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
         <fa name="fab fa-facebook-f" size="2x"></fa>
       </a>
-      <a href="" class="text-white ml-3">
+      <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
         <fa name="fab fa-instagram" size="2x"></fa>
       </a>
-      <a href="" class="text-white ml-3">
+      <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
+        class="text-white ml-3">
         <fa name="fab fa-envelope" size="2x"></fa>
       </a>
-      <a href="" class="text-white ml-3">
+      <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
         <fa name="fab fa-stack-overflow" size="2x"></fa>
       </a>
-      <a href="" class="text-white ml-3">
+      <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
         <fa name="fab fa-linkedin" size="2x"></fa>
       </a>
     </div>
