--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,108 @@
-<div class="row" style="min-height: -webkit-fill-available;">
-  <div class="col-lg-8 text-light bg-dark mh-100">
-    <div class="d-flex justify-content-center mt-5">
-      <h1 id="title_name">Lucas Brito</h1>
+<ng-container *ngIf="TEXT_TRANS =='en'; else elseEnSite">
+  <div class="row" style="min-height: -webkit-fill-available;">
+    <div class="col-lg-8 text-light bg-dark mh-100">
+      <div class="d-flex justify-content-left ml-1 mt-1">
+        <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="trasnlate()">
+          {{TEXT_TRANS}}
+        </a>
+      </div>
+      <div class="d-flex justify-content-center mt-5">
+        <h1 id="title_name">Lucas Brito</h1>
+      </div>
+      <div class="d-flex justify-content-center">
+        <h3 id="sub_title">Aluno de Big Data no Agronegócio</h3>
+      </div>
+      <hr>
+      <div class="d-flex align-items-start ml-3 mr-3 mt-5">
+        <h5>Sobre</h5>
+      </div>
+      <div class="d-flex align-items-start ml-4 mr-4 sobre_text">
+        Olá, bem vindo ao meu web site, me chamo Lucas de Brito Silva e possuo {{idade}} anos. Considero-me um
+        entusiasta
+        em Tecnologia e sou motivado pelos meus sonhos, em que para realiza-los, buscquei capacitar-me com a formação no
+        curso Técnico de Computação na ETEC Professor Massuyuki Kawano e atualmente realizo o curso de Big Data no
+        Agronegócio, sendo da primeira turma a se formar no Brasil. Espero que você tenha prazer em desbravar meu site,
+        vamos nessa?
+      </div>
+      <div class="d-flex justify-content-center icons_div">
+        <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
+          <fa name="fab fa-whatsapp" size="2x"></fa>
+        </a>
+        <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
+          <fa name="fab fa-facebook-f" size="2x"></fa>
+        </a>
+        <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
+          <fa name="fab fa-instagram" size="2x"></fa>
+        </a>
+        <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
+          class="text-white ml-3">
+          <fa name="fab fa-envelope" size="2x"></fa>
+        </a>
+        <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
+          <fa name="fab fa-stack-overflow" size="2x"></fa>
+        </a>
+        <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
+          <fa name="fab fa-linkedin" size="2x"></fa>
+        </a>
+      </div>
     </div>
-    <div class="d-flex justify-content-center">
-      <h3 id="sub_title">Aluno de Big Data no Agronegócio</h3>
-    </div>
-    <hr>
-    <div class="d-flex align-items-start ml-3 mr-3 mt-5">
-      <h5>Sobre</h5>
-    </div>
-    <div class="d-flex align-items-start ml-4 mr-4 sobre_text">
-      Olá, bem vindo ao meu web site, me chamo Lucas de Brito Silva e possuo {{idade}} anos. Considero-me um entusiasta
-      em Tecnologia e sou motivado pelos meus sonhos, em que para realiza-los, buscquei capacitar-me com a formação no
-      curso Técnico de Computação na ETEC Professor Massuyuki Kawano e atualmente realizo o curso de Big Data no
-      Agronegócio, sendo da primeira turma a se formar no Brasil. Espero que você tenha prazer em desbravar meu site,
-      vamos nessa?
-    </div>
-    <div class="d-flex justify-content-center icons_div">
-      <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
-        <fa name="fab fa-whatsapp" size="2x"></fa>
-      </a>
-      <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
-        <fa name="fab fa-facebook-f" size="2x"></fa>
-      </a>
-      <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
-        <fa name="fab fa-instagram" size="2x"></fa>
-      </a>
-      <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
-        class="text-white ml-3">
-        <fa name="fab fa-envelope" size="2x"></fa>
-      </a>
-      <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
-        <fa name="fab fa-stack-overflow" size="2x"></fa>
-      </a>
-      <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
-        <fa name="fab fa-linkedin" size="2x"></fa>
-      </a>
+    <div class="col-lg-4 mh-100 imgPrincipal">
     </div>
   </div>
-  <div class="col-lg-4 mh-100 imgPrincipal">
+  <div class="row">
+
   </div>
-</div>
-
-<div class="row">
-
-</div>
+</ng-container>
+<ng-template #elseEnSite>
+  <div class="row" style="min-height: -webkit-fill-available;">
+    <div class="col-lg-8 text-light bg-dark mh-100">
+      <div class="d-flex justify-content-left ml-1 mt-1">
+        <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="trasnlate()">
+          {{TEXT_TRANS}}
+        </a>
+      </div>
+      <div class="d-flex justify-content-center mt-5">
+        <h1 id="title_name">Lucas Brito</h1>
+      </div>
+      <div class="d-flex justify-content-center">
+        <h3 id="sub_title">Big Data Student in Agribusiness</h3>
+      </div>
+      <hr>
+      <div class="d-flex align-items-start ml-3 mr-3 mt-5">
+        <h5>About me</h5>
+      </div>
+      <div class="d-flex align-items-start ml-4 mr-4 sobre_text">
+        Hi, welcome to my web site, my name is Lucas de Brito Silva and I'm {{idade}} years old. I consider myself one
+        enthusiastic in Technology and I am motivated by my dreams, in which to realize them, I sought to qualify with
+        Computer Technician course at ETEC Professor Massuyuki Kawano and I am currently conducting the Big Data course
+        at Agribusiness, being the first class to graduate in Brazil. I hope you will enjoy breaking my site, here we
+        go?
+      </div>
+      <div class="d-flex justify-content-center icons_div">
+        <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
+          <fa name="fab fa-whatsapp" size="2x"></fa>
+        </a>
+        <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
+          <fa name="fab fa-facebook-f" size="2x"></fa>
+        </a>
+        <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
+          <fa name="fab fa-instagram" size="2x"></fa>
+        </a>
+        <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
+          class="text-white ml-3">
+          <fa name="fab fa-envelope" size="2x"></fa>
+        </a>
+        <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
+          <fa name="fab fa-stack-overflow" size="2x"></fa>
+        </a>
+        <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
+          <fa name="fab fa-linkedin" size="2x"></fa>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 mh-100 imgPrincipal">
+    </div>
+  </div>
+  <div class="row">
+  </div>
+</ng-template>
