--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -1,8 +1,12 @@
 <div class="row" style="min-height: -webkit-fill-available;">
   <div class="col-lg-12 text-light bg-dark mh-100">
+    <div class="d-flex justify-content-left ml-1 mt-1">
+      <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="trasnlate()">
+        {{TEXT_TRANS}}
+      </a>
+    </div>
     <div class="d-flex justify-content-center mt-5">
-      <igx-avatar [src]="imgSource" roundShape="true" size="large">
-      </igx-avatar>
+      <img src="../../assets/img/principal-min-mob.jpg" alt="Perfil" id="imgPerfil">
     </div>
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
