--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="row" style="min-height: -webkit-fill-available;">
     <div class="col-lg-8 text-light bg-dark mh-100">
       <div class="d-flex justify-content-left ml-1 mt-1">
-        <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="trasnlate()">
+        <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="translate()">
           {{TEXT_TRANS}}
         </a>
       </div>
@@ -57,7 +57,7 @@
   <div class="row" style="min-height: -webkit-fill-available;">
     <div class="col-lg-8 text-light bg-dark mh-100">
       <div class="d-flex justify-content-left ml-1 mt-1">
-        <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="trasnlate()">
+        <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="translate()">
           {{TEXT_TRANS}}
         </a>
       </div>
