phrases and icons

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
       <div class="d-flex align-items-start ml-4 mr-4 sobre_text">
         Olá, bem vindo ao meu web site, me chamo Lucas de Brito Silva e possuo {{idade}} anos. Considero-me um
         entusiasta
-        em Tecnologia e sou motivado pelos meus sonhos, em que para realiza-los, buscquei capacitar-me com a formação no
+        em Tecnologia e sou motivado pelos meus sonhos, em que para realiza-los, busquei capacitar-me com a formação no
         curso Técnico de Computação na ETEC Professor Massuyuki Kawano e atualmente realizo o curso de Big Data no
         Agronegócio, sendo da primeira turma a se formar no Brasil. Espero que você tenha prazer em desbravar meu site,
         vamos nessa?
@@ -65,18 +65,17 @@
         <h1 id="title_name">Lucas Brito</h1>
       </div>
       <div class="d-flex justify-content-center">
-        <h3 id="sub_title">Big Data Student in Agribusiness</h3>
+        <h3 id="sub_title">Big Data in Agribusiness Student</h3>
       </div>
       <hr>
       <div class="d-flex align-items-start ml-3 mr-3 mt-5">
         <h5>About me</h5>
       </div>
       <div class="d-flex align-items-start ml-4 mr-4 sobre_text">
-        Hi, welcome to my web site, my name is Lucas de Brito Silva and I'm {{idade}} years old. I consider myself one
-        enthusiastic in Technology and I am motivated by my dreams, in which to realize them, I sought to qualify with
-        Computer Technician course at ETEC Professor Massuyuki Kawano and I am currently conducting the Big Data course
-        at Agribusiness, being the first class to graduate in Brazil. I hope you will enjoy breaking my site, here we
-        go?
+        Hi, welcome to my web site, my name is Lucas de Brito Silva and I'm {{idade}} years old. I consider myself an
+        enthusiastic in Technology and I'm motivated by my dreams, and to accomplish them I sought to get qualified with
+        Computer Technician course at ETEC Professor Massuyuki Kawano and I am currently enrolled to Big Data in
+        Agribusiness course, being the first class to graduate in Brazil. I hope you enjoy my site, here we go!
       </div>
       <div class="d-flex justify-content-center icons_div">
         <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
