Fixing Mobile Title

--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -59,7 +59,7 @@
         <h1 id="title_name">Lucas Brito</h1>
       </div>
       <div class="d-flex justify-content-center">
-        <h3 id="sub_title">Big Data Student in Agribusiness</h3>
+        <h3 id="sub_title">Big Data in Agribusiness Student</h3>
       </div>
       <hr>
       <div class="d-flex justify-content-center icons_div">
