Colocando exemplo de como fazer tradução

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="row">
-
+    <!--     <p translate [translateParams]="{name: 'Andreas'}">demo.greeting</p> -->
   </div>
 </ng-container>
 <ng-template #elseEnSite>
