--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,7 @@
 <div class="row" style="min-height: -webkit-fill-available;">
   <div class="col-lg-8 text-light bg-dark mh-100">
     <div class="d-flex justify-content-left ml-1 mt-1">
-      <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="useLanguage()">
-        home.lang
-      </a>
+      <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="useLanguage()">home.lang</a>
     </div>
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
@@ -15,9 +13,7 @@
     <div class="d-flex align-items-start ml-3 mr-3 mt-5">
       <h5 translate>home.about</h5>
     </div>
-    <div translate class="d-flex align-items-start ml-4 mr-4 sobre_text" [translateParams]="{idade: idade}">
-      home.description
-    </div>
+    <div translate class="d-flex align-items-start ml-4 mr-4 sobre_text" [translateParams]="{idade: idade}">home.description</div>
     <div class="d-flex justify-content-center icons_div">
       <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
         <fa name="fab fa-whatsapp" size="2x"></fa>
