--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row" style="min-height: -webkit-fill-available;">
+<div class="row" style="min-height: -webkit-fill-available; overflow-y: auto;">
   <div class="col-lg-8 text-light bg-dark mh-100">
     <div class="d-flex justify-content-left ml-1 mt-1">
       <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="useLanguage()">home.lang</a>
