--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="TEXT_TRANS =='en'; else elseEnSite">
-  <div class="row" style="min-height: -webkit-fill-available;">
+  <div class="row" style="min-height: -webkit-fill-available; overflow-y: auto;">
     <div class="col-lg-12 text-light bg-dark mh-100">
       <div class="d-flex justify-content-left ml-1 mt-1">
         <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="translate()">
@@ -45,7 +45,7 @@
   </div>
 </ng-container>
 <ng-template #elseEnSite>
-  <div class="row" style="min-height: -webkit-fill-available;">
+  <div class="row" style="min-height: -webkit-fill-available; overflow-y: auto;">
     <div class="col-lg-12 text-light bg-dark mh-100">
       <div class="d-flex justify-content-left ml-1 mt-1">
         <a class="btn btn-outline-secondary btn-fab btn-sm" (click)="translate()">
