ajustando a margin de baixo

--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -13,7 +13,7 @@
       <h3 translate id="sub_title">home.sub_title</h3>
     </div>
     <hr>
-    <div class="d-flex justify-content-center icons_div">
+    <div class="d-flex justify-content-center icons_div mb-3">
       <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
         <fa name="fab fa-whatsapp" size="2x"></fa>
       </a>
