--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -15,23 +15,23 @@
     <hr>
     <div class="d-flex justify-content-center icons_div mb-3">
       <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
-        <fa name="fab fa-whatsapp" size="2x"></fa>
+        <i class="fab fa-whatsapp fa-2x"></i>
       </a>
       <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
-        <fa name="fab fa-facebook-f" size="2x"></fa>
+        <i class="fab fa-facebook-f fa-2x"></i>
       </a>
       <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
-        <fa name="fab fa-instagram" size="2x"></fa>
+        <i class="fab fa-instagram fa-2x"></i>
       </a>
       <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
         class="text-white ml-3">
-        <fa name="fab fa-envelope" size="2x"></fa>
+        <i class="fas fa-envelope fa-2x"></i>
       </a>
       <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
-        <fa name="fab fa-stack-overflow" size="2x"></fa>
+        <i class="fab fa-stack-overflow fa-2x"></i>
       </a>
       <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
-        <fa name="fab fa-linkedin" size="2x"></fa>
+        <i class="fab fa-linkedin fa-2x"></i>
       </a>
     </div>
   </div>
