colocando a nova imagem

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="row" style="min-height: -webkit-fill-available; overflow-y: auto;">
-  <div class="col-lg-8 text-light bg-dark mh-100">
+<div class="row bg-dark" style="min-height: -webkit-fill-available; overflow-y: false;">
+  <div class="col-lg-7 text-light bg-dark mh-100">
     <div class="d-flex justify-content-left ml-1 mt-1">
       <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="useLanguage()">home.lang</a>
     </div>
@@ -36,7 +36,7 @@
       </a>
     </div>
   </div>
-  <div class="col-lg-4 mh-100 imgPrincipal">
+  <div class="col-lg-5 mh-100 imgPrincipal">
   </div>
 </div>
 <div class="row">
