nova imagem para mobile

--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -4,7 +4,7 @@
       <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="useLanguage()">home.lang</a>
     </div>
     <div class="d-flex justify-content-center mt-5">
-      <img src="../../assets/img/principal-min-mob.jpg" alt="Perfil" id="imgPerfil">
+      <img src="../../assets/img/principal-min-mob.png" alt="Perfil" id="imgPerfil">
     </div>
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
