--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,31 +14,51 @@
       <h5 translate>home.about</h5>
     </div>
     <div translate class="d-flex align-items-start ml-4 mr-4 sobre_text" [translateParams]="{idade: idade}">home.description</div>
+
     <div class="d-flex justify-content-center icons_div">
-      <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
-        <i class="fab fa-whatsapp fa-2x"></i>
-      </a>
-      <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
-        <i class="fab fa-facebook-f fa-2x"></i>
-      </a>
-      <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
-        <i class="fab fa-instagram fa-2x"></i>
-      </a>
+
       <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
         class="text-white ml-3">
-        <i class="fas fa-envelope fa-2x"></i>
+        <em class="fas fa-envelope fa-2x"></em>
       </a>
-      <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
-        <i class="fab fa-stack-overflow fa-2x"></i>
+
+      <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
+        <em class="fab fa-facebook-f fa-2x"></em>
       </a>
+
+      <a href="https://medium.com/@lucasbsilva29" class="text-white ml-3">
+        <em class="fab fa-medium fa-2x"></em>
+      </a>
+
+      <a href="https://twitter.com/Lucs1590" class="text-white ml-3">
+        <em class="fab fa-twitter fa-2x"></em>
+      </a>
+
       <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
-        <i class="fab fa-linkedin fa-2x"></i>
+        <em class="fab fa-linkedin fa-2x"></em>
+      </a>
+
+      <a href="https://github.com/Lucs1590" class="text-white ml-3">
+        <em class="fab fa-github fa-2x"></em>
+
+        <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
+          <em class="fab fa-stack-overflow fa-2x"></em>
+        </a>
+      </a>
+
+      <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
+        <em class="fab fa-whatsapp fa-2x"></em>
+      </a>
+
+      <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
+        <em class="fab fa-instagram fa-2x"></em>
       </a>
     </div>
   </div>
   <div class="col-lg-5 mh-100 imgPrincipal">
   </div>
 </div>
+
 <div class="row">
   <!--     <p translate [translateParams]="{name: 'Andreas'}">demo.greeting</p> -->
 </div>
