--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -13,26 +13,8 @@
       <h3 translate id="sub_title">home.sub_title</h3>
     </div>
     <hr>
-    <div class="d-flex justify-content-center icons_div mb-3">
-      <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3">
-        <i class="fab fa-whatsapp fa-2x"></i>
-      </a>
-      <a href="https://www.facebook.com/lucas.brito.100" class="text-white ml-3">
-        <i class="fab fa-facebook-f fa-2x"></i>
-      </a>
-      <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3">
-        <i class="fab fa-instagram fa-2x"></i>
-      </a>
-      <a href="mailto:lucasbsilva29@gmail.com?subject=Brito%20Web%20Site&body=Ola%20Lucas%20Brito"
-        class="text-white ml-3">
-        <i class="fas fa-envelope fa-2x"></i>
-      </a>
-      <a href="https://pt.stackoverflow.com/users/122718/lucas-brito" class="text-white ml-3">
-        <i class="fab fa-stack-overflow fa-2x"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/lucas-brito100/" class="text-white ml-3">
-        <i class="fab fa-linkedin fa-2x"></i>
-      </a>
-    </div>
+
+    <app-icones class="mb-3"></app-icones>
+
   </div>
 </div>
