codigo para a proxima sessão

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,6 @@
   </div>
 </div>
 
-<div class="row">
-  <!--     <p translate [translateParams]="{name: 'Andreas'}">demo.greeting</p> -->
-</div>
+<!-- <div class="row bg-dark" style="min-height:100%; overflow-y: auto;">
+  <p translate [translateParams]="{name: 'Andreas'}">demo.greeting</p>
+</div> -->
