--- a/src/app/m-home/m-home.component.css
+++ b/src/app/m-home/m-home.component.css
@@ -1,3 +1,10 @@
+#particles-js canvas{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 #title_name{
     font-family: 'Montserrat', 'Anton', 'Poppins', sans-serif;
     font-size: 4rem;
