--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -1,20 +1,28 @@
 <div class="row" style="min-height: -webkit-fill-available; overflow-y: auto;">
+
   <div class="col-lg-12 text-light bg-dark mh-100">
     <div class="d-flex justify-content-left ml-1 mt-1">
       <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="useLanguage()">home.lang</a>
     </div>
+
     <div class="d-flex justify-content-center mt-5">
       <img src="../../assets/img/principal-min-mob.png" alt="Perfil" id="imgPerfil">
     </div>
+
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
     </div>
+
     <div class="d-flex justify-content-center">
       <h3 translate id="sub_title">home.sub_title</h3>
     </div>
+
     <hr>
 
     <app-icones class="mb-3"></app-icones>
 
   </div>
+<!--   <div id="particles-js">
+    abcd
+  </div> -->
 </div>
