--- a/src/app/icones/icones.component.html
+++ b/src/app/icones/icones.component.html
@@ -29,9 +29,9 @@
         <em class="fab fa-stack-overflow fa-2x"></em>
     </a>
 
-    <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3 icon">
+    <!-- <a href="https://api.whatsapp.com/send?phone=5514997270606&text=Oi%20Lucas" class="text-white ml-3 icon">
         <em class="fab fa-whatsapp fa-2x"></em>
-    </a>
+    </a> -->
 
     <a href="https://www.instagram.com/_lucasbritoo" class="text-white ml-3 icon">
         <em class="fab fa-instagram fa-2x"></em>
