feat(technologies.component): add particle js at technologies

--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,1 +1,6 @@
-<p>technologies works!</p>
+<div id="particles-js" class="row bg-dark" style="min-height:100%; overflow-y: auto;">
+
+    <div id="welcome">
+        Welcome to my page!
+    </div>
+</div>
