feat(technologies): moving technologies

--- a/src/app/separador/separador.component.html
+++ b/src/app/separador/separador.component.html
@@ -3,4 +3,5 @@
 </ng-container>
 <ng-template #deskTemplate>
   <app-home></app-home>
+  <app-recommendations></app-recommendations>
 </ng-template>
