feat(recommendations.component.html): add authors infos

--- a/src/app/secondary-components/recommendations/recommendations.component.html
+++ b/src/app/secondary-components/recommendations/recommendations.component.html
@@ -3,11 +3,13 @@
 		<h5 translate>recommendations.title</h5>
 	</div>
 	<div id="carouselControls" class="carousel slide carousel-fade w-100" data-ride="carousel">
-		<div class="carousel-inner">
+		<div class="carousel-inner text-center">
 			<div [ngClass]="i == 0 ? 'carousel-item active': 'carousel-item'"
 				*ngFor="let recommendation of recommendations; let i = index" data-interval="5000">
 				<img class="imgAuthors" src="{{recommendation.authorImage}}" alt="author-image">
-				{{recommendation.author}}
+				<small>{{recommendation.state}}</small>
+				<p>{{recommendation.text}}</p>
+				<p class="blockquote-footer">{{recommendation.author}}</p>
 			</div>
 		</div>
 
