--- a/src/app/not-found/not-found.component.css
+++ b/src/app/not-found/not-found.component.css
@@ -11,8 +11,7 @@ h3{
     font-family: 'Montserrat', 'Anton', 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 8rem;
-    position: absolute;
-    left: 52rem;
+    position: relative;
 
     text-shadow:
         0.05em 0 0 rgba(255, 0, 0, .75),
