--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,15 @@
-<p>not-found works!</p>
+<div class="container-xxl bg-dark text-white">
+    <div class="row justify-content-center mt-5">
+        <p class="glitch-text">
+            <span aria-hidden="true">404</span>
+            404
+            <span aria-hidden="true">404</span>
+        </p>
+    </div>
+    <div class="row justify-content-center mt-3">
+        <h3>Something went wrong...</h3>
+    </div>
+    <div class="row justify-content-center mt-3">
+        <h3>Page not found!</h3>
+    </div>
+</div>
