--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,7 @@
 <div class="container-xxl bg-dark text-white">
+    <div class="d-flex justify-content-left ml-1 mt-1">
+        <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">home.lang</a>
+    </div>
     <div class="row justify-content-center mt-5">
         <p class="glitch-text">
             <span aria-hidden="true">404</span>
@@ -7,9 +10,9 @@
         </p>
     </div>
     <div class="row justify-content-center mt-3">
-        <h3>Something went wrong...</h3>
+        <h3 translate>not_found.sub</h3>
     </div>
     <div class="row justify-content-center mt-3">
-        <h3>Page not found!</h3>
+        <h3 translate>not_found.sub_2</h3>
     </div>
 </div>
