feat(not-found.component.html): making navigation to home

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -16,6 +16,7 @@
         <h3 translate>not_found.sub_2</h3>
     </div>
     <div class="row justify-content-center mt-2">
-        <button translate type="button" class="btn btn-outline-secondary rounded-pill">not_found.back_button</button>
+        <button translate type="button" class="btn btn-outline-secondary rounded-pill"
+            (click)="utils.goHome()">not_found.back_button</button>
     </div>
 </div>
