--- a/src/app/separador/separador.component.html
+++ b/src/app/separador/separador.component.html
@@ -3,5 +3,7 @@
 </ng-container>
 <ng-template #deskTemplate>
   <app-home></app-home>
-  <app-recommendations></app-recommendations>
+  <!-- <app-recommendations></app-recommendations> -->
+  <!-- <app-technologies></app-technologies> -->
+  <!-- <app-publications></app-publications> -->
 </ng-template>
