--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row bg-dark" style="min-height:100%; overflow-y: auto;">
   <div class="col-lg-7 text-light bg-dark mh-100">
-    <div class="d-flex justify-content-left ml-1 mt-1">
-      <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">home.lang</a>
+    <div class="d-flex justify-content-left ml-2 mt-2 text-white">
+      <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
     </div>
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
