--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -2,7 +2,7 @@
 
   <div class="col-lg-12 text-light bg-dark mh-100">
     <div class="d-flex justify-content-left ml-1 mt-1">
-      <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">home.lang</a>
+      <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
     </div>
 
     <div class="d-flex justify-content-center mt-5">
