--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="container-xxl bg-dark text-white">
     <div class="d-flex justify-content-left ml-1 mt-1">
-        <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">home.lang</a>
+        <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
     </div>
     <div class="row justify-content-center mt-5">
         <p class="glitch-text">
