--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="row bg-dark" style="min-height:100%; overflow-y: auto;">
   <div class="col-lg-7 text-light bg-dark mh-100">
-    <div class="d-flex justify-content-left ml-2 mt-2 text-white">
+    <div class="d-flex justify-content-left ml-2 mt-2 text-white navnav">
       <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
+      <div class="ml-5 mt-1">
+        <a [routerLink]="['/']" class="ml-3 itemnav">Resume</a>
+        <a [routerLink]="['/']" class="ml-3 itemnav">Portfolio</a>
+      </div>
     </div>
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
