--- a/src/app/secondary-components/navbar/navbar.component.html
+++ b/src/app/secondary-components/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <div class="d-flex justify-content-left ml-2 mt-2 text-white">
     <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
     <div class="ml-5 mt-1">
-        <a [routerLink]="['/']" class="ml-3 itemnav">Resume</a>
-        <a [routerLink]="['/']" class="ml-3 itemnav">Portfolio</a>
+        <a [routerLink]="item.ref" class="ml-3 itemnav" *ngFor="let item of itemsList">{{item.name}}</a>
     </div>
-</div>  
+</div>
