--- a/src/app/secondary-components/not-found/not-found.component.html
+++ b/src/app/secondary-components/not-found/not-found.component.html
@@ -1,7 +1,5 @@
 <div class="container-xxl bg-dark text-white">
-    <div class="d-flex justify-content-left ml-1 mt-1">
-        <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
-    </div>
+    <app-navbar></app-navbar>
     <div class="row justify-content-center mt-5">
         <p class="glitch-text">
             <span aria-hidden="true">404</span>
