refactor: set by default bg black and text white

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="row bg-dark" style="min-height:100%; overflow-y: auto;">
-  <div class="col-lg-7 text-light bg-dark mh-100">
+<div class="row" style="min-height:100%; overflow-y: auto;">
+  <div class="col-lg-7 text-light mh-100">
     <app-navbar></app-navbar>
     <div class="d-flex justify-content-center mt-5">
       <h1 id="title_name">Lucas Brito</h1>
@@ -21,6 +21,6 @@
   </div>
 </div>
 
-<!-- <div class="row bg-dark" style="min-height:100%; overflow-y: auto;">
+<!-- <div class="row" style="min-height:100%; overflow-y: auto;">
   <p translate [translateParams]="{name: 'Andreas'}">demo.greeting</p>
 </div> -->
