--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="min-height: -webkit-fill-available; overflow-y: auto;">
 
-  <div class="col-lg-12 text-light bg-dark mh-100">
+  <div class="col-lg-12 text-light mh-100">
     <app-navbar></app-navbar>
 
     <div class="d-flex justify-content-center mt-5">
