--- a/src/app/secondary-components/not-found/not-found.component.html
+++ b/src/app/secondary-components/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="container-xxl bg-dark text-white">
+<div class="container-xxl">
     <app-navbar></app-navbar>
     <div class="row justify-content-center mt-5">
         <p class="glitch-text">
