--- a/src/app/secondary-components/recommendations/recommendations.component.html
+++ b/src/app/secondary-components/recommendations/recommendations.component.html
@@ -1,4 +1,4 @@
-<div class="row bg-dark" style="min-height:100%; overflow-y: auto;">
+<div class="row" style="min-height:100%; overflow-y: auto;">
 	<div class="d-flex align-items-start ml-5 mr-3">
 		<h5 translate>recommendations.title</h5>
 	</div>
