--- a/src/app/secondary-components/technologies/technologies.component.html
+++ b/src/app/secondary-components/technologies/technologies.component.html
@@ -1,4 +1,4 @@
-<div id="particles-js" class="row bg-dark" style="min-height:100%; overflow-y: auto;">
+<div id="particles-js" class="row" style="min-height:100%; overflow-y: auto;">
 
     <div id="welcome">
         Welcome to my page!
