style(publications.component.html): identation and bootom border

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -1,19 +1,19 @@
 <app-navbar></app-navbar>
 <div class="row pl-5 pt-5 mt-5">
-    <h3>Minhas Publicações</h3>
+    <h3>Ultimas Publicações</h3>
 </div>
 <div class="row">
     <div class="col-sm-12 col-md-12	col-lg-6 col-xl-6 mt-3 pl-5 px-sm-5 px-md-5 sobre_text">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-        type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
         remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
-        Lorem Ipsum.
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
     </div>
 </div>
 
-<div class="d-flex flex-wrap text-dark justify-content-around">
+<div class="d-flex flex-wrap text-dark justify-content-around pb-4">
 
     <div class="card mt-5" *ngFor="let pub of publications">
         <div class="card-body">
