--- a/src/app/secondary-components/publications/publications.component.css
+++ b/src/app/secondary-components/publications/publications.component.css
@@ -1,9 +1,37 @@
 .card {
     width: 25rem;
     height: 20rem;
+    border-width: 3px 0 3px 0;
+    transition-duration: 700ms;
 }
 
-h3{
+.card:hover{
+    display: inline-block;
+    transform: scale(1.15);
+    transition-duration: 700ms;
+    -webkit-transform: scale(1.15); /* Safari and Chrome */
+    -moz-transform: scale(1.15); /* Firefox */
+    -ms-transform: scale(1.15); /* IE 9+ */
+    -o-transform: scale(1.15); /* Opera */
+}
+
+.thumb {
+    height: 4rem;
+    width: 4rem;
+    object-fit: cover;
+    float: left;
+}
+
+.read-more {
+    color:#E69C24
+}
+
+.foot-card {
+    position: absolute;
+    bottom: 1rem;
+}
+
+h2{
     font-family: 'Anton', 'Poppins', sans-serif;
 }
 
