feat(publications.component): add cover image to the page

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -13,6 +13,10 @@
             </a>
         </div>
     </div>
+    <!-- <div>
+        <img src="../../../assets/img/writer.jpeg" class="img-fluid" alt="Writer Image"
+            style="height: 15rem;width: 60rem;object-fit: cover;">
+    </div> -->
 </div>
 
 <div class="d-flex flex-wrap text-dark justify-content-around pb-4">
