feat: changing font weight

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -23,5 +23,6 @@ hr{
 
 .sobre_text {
     font-family: 'Open Sans', 'Roboto Condensed', 'Lato', sans-serif;
+    font-weight: 300;
     color: white;
 }
