--- a/src/app/m-home/m-home.component.css
+++ b/src/app/m-home/m-home.component.css
@@ -25,6 +25,7 @@ hr{
 
 .sobre_text {
     font-family: 'Open Sans', 'Roboto Condensed', 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 .icons_div{
