--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -26,7 +26,7 @@
         <div class="card-body">
             <img [src]="pub.image" class="thumb mr-2 mb-1" alt="Thumbnail" height="2rem">
             <h4 class="card-title">{{ pub.title }}</h4>
-            <div class="card-text" [innerHTML]=pub.description></div>
+            <div class="card-text sobre_text" [innerHTML]=pub.description></div>
             <div class="row w-100 foot-card">
                 <div class="col">
                     <a translate [href]=pub.url class="read-more">
