--- a/src/app/secondary-components/navbar/navbar.component.html
+++ b/src/app/secondary-components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <div class="d-flex justify-content-left ml-2 mt-2">
     <a translate class="btn btn-outline-secondary btn-fab btn-sm" (click)="utils.useLanguage()">lang</a>
     <div class="ml-5 mt-1">
-        <a translate [routerLink]="item.ref" class="ml-3 itemnav" *ngFor="let item of itemsList">{{item.name | async}}</a>
+        <a translate [routerLink]="item.ref" class="ml-3 itemnav" *ngFor="let item of itemsList">
+            {{item.name | async}}
+        </a>
     </div>
 </div>
