feat(publications.component): add skeleton on cards

--- a/src/app/secondary-components/publications/publications.component.css
+++ b/src/app/secondary-components/publications/publications.component.css
@@ -5,7 +5,7 @@
     transition-duration: 700ms;
 }
 
-.card:hover{
+.real-card:hover{
     display: inline-block;
     transform: scale(1.15);
     transition-duration: 700ms;
