--- a/src/app/secondary-components/not-found/not-found.component.html
+++ b/src/app/secondary-components/not-found/not-found.component.html
@@ -7,7 +7,7 @@
             <span aria-hidden="true">404</span>
         </p>
     </div>
-    <div class="row justify-content-center mt-3" *ngIf="utils.currentLang == 'en'">
+    <div class="row justify-content-center mt-3" *ngIf="utils.currentLang === 'en'">
         <h3 translate>not_found.sub</h3>
     </div>
     <div class="row justify-content-center mt-3">
